# WEB_HW_09_Scrapy

HW_09/: author.json  main.py  pyproject.toml
