[tool.poetry]
name = "hw-09"
version = "0.1.0"
description = ""
authors = ["GhosteLLoS <123022357+GhosteLLoS@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_09"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.19"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
